cursos description update

--- a/curso/index.html
+++ b/curso/index.html
@@ -159,18 +159,18 @@
 
     <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
       <p style="margin: 15px 0;">
-        <strong>🔹 Conceptos Prácticos para Geocientíficos en el Uso de Datos Magnéticos y Gravedad</strong><br>
-        👨‍🏫 Con el Ph.D. Bogdan Nitescu
+        <strong>🔹 Procesamiento de datos magnetotelúricos en el software EMPOWER</strong><br>
+        👨‍🏫 Con el Geól. M.Sc. Alvaro Vargas
       </p>
 
       <p style="margin: 15px 0;">
-        🗓️ Miércoles 5 de noviembre<br>
-        ⏰ 2 - 5 pm<br>
-        📍 Salón por definir
+        🗓️ Jueves 6 de noviembre<br>
+        ⏰ 9 am - 12 pm<br>
+        📍 Salón Multifuncional (2do piso) Edificio Bienestar Pro
       </p>
 
       <p style="margin: 15px 0;">
-        💡 Aprende sobre el uso práctico de datos magnéticos y de gravedad en geociencias 🚀
+        💡 Aprende sobre el procesamiento de datos magnetotelúricos en el software EMPOWER 🚀
       </p>
     </div>
 
@@ -187,18 +187,18 @@
 
     <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
       <p style="margin: 15px 0;">
-        <strong>🔹 Conceptos Prácticos para Geocientíficos en el Uso de Datos Magnéticos y Gravedad</strong><br>
-        👨‍🏫 Con el Ph.D. Bogdan Nitescu
+        <strong>🔹 Interpretaciones Sismotectónicas</strong><br>
+        👨‍🏫 Con el Ph.D. Rodrigo León Loya
       </p>
 
       <p style="margin: 15px 0;">
-        🗓️ Miércoles 5 de noviembre<br>
-        ⏰ 2 - 5 pm<br>
-        📍 Salón por definir
+        🗓️ Martes 4 de noviembre<br>
+        ⏰ 9 am - 12 pm<br>
+        📍 Edificio Jorge Bautista Vesga Salón 106
       </p>
 
       <p style="margin: 15px 0;">
-        💡 Aprende sobre el uso práctico de datos magnéticos y de gravedad en geociencias 🚀
+        💡 Aprende sobre interpretaciones sismotectónicas 🚀
       </p>
     </div>
 
