salida de campo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <td class="navigation"><a title="Novedades" href="novedades">Novedades</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
       <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
+      <td class="navigation"><a title="Salida de Campo" href="salida/">Salida de Campo</a></td>
     </tr>
   </table>
 
@@ -87,29 +88,7 @@
   </div>
 
   <h3> Salida de Campo 🌍🎒</h3>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Práctica de Magnetotelúrica Incluyendo su Adquisición y Procesamiento</strong><br>
-      👨‍🏫 Con el Ing. M.Sc. Efraín Andrés Laverde
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Sábado 8 de noviembre<br>
-      ⏰ Hora por definir<br>
-      📍 Salida de campo
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Participa en una práctica de campo sobre magnetotelúrica con adquisición y procesamiento de datos 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/salida_campo.png" alt="Salida de Campo - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
+  <p>Consulta la información completa de la salida de campo en la página dedicada: <a href="salida/">Salida de Campo — detalles</a>.</p>
 
   <h2>Comité Organizador</h2>
 
