--- a/directions/index.html
+++ b/directions/index.html
@@ -34,6 +34,7 @@
   <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
   <td class="navigation"><a class="current" title="Directions to the Conference" href="directions">Cómo llegar</a></td>
     <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
+    <td class="navigation"><a title="Salida de Campo" href="../salida/">Salida de Campo</a></td>
     </tr>
   </table>
 
