--- a/novedades/index.html
+++ b/novedades/index.html
@@ -77,6 +77,7 @@
   <td class="navigation"><a class="current" title="Novedades" href=".">Novedades</a></td>
   <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
       <td class="navigation"><a title="Conference Flyer" href="../flyer">Contacto</a></td>
+      <td class="navigation"><a title="Salida de Campo" href="../salida/">Salida de Campo</a></td>
     </tr>
   </table>
 
