--- a/flyer/index.html
+++ b/flyer/index.html
@@ -33,7 +33,6 @@
   <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
   <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
   <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
-  <td class="navigation"><a class="current" title="Conference Flyer" href="flyer">Contacto</a></td>
     <td class="navigation"><a title="Salida de Campo" href="../salida/">Salida de Campo</a></td>
     </tr>
   </table>
@@ -66,17 +65,7 @@
         </div>
 
 
-    <!-- Flyers -->
-    <table class="flyers">
-        <tr>
-            <td class="flyer">
-                <img src="assets/Flyer1.png" alt="Flyer 1">
-            </td>
-            <td class="flyer">
-                <img src="assets/Flyer2.png" alt="Flyer 2">
-            </td>
-        </tr>
-    </table>
+  <!-- Flyers removidos: sólo contenido textual de contacto permanece -->
 
     <footer class="footer-enhanced">
       <div class="footer-content">
