--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   <td class="navigation"><a title="Charlas" href="charlas">Charlas</a></td>
   <td class="navigation"><a title="Novedades" href="novedades">Novedades</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
-      <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
-      <td class="navigation"><a title="Salida de Campo" href="salida/">Salida de Campo</a></td>
+  <td class="navigation"><a title="Salida de Campo" href="salida/">Salida de Campo</a></td>
     </tr>
   </table>
 
@@ -87,8 +86,6 @@
     </div>
   </div>
 
-  <h3> Salida de Campo 🌍🎒</h3>
-  <p>Consulta la información completa de la salida de campo en la página dedicada: <a href="salida/">Salida de Campo — detalles</a>.</p>
 
   <h2>Comité Organizador</h2>
 
@@ -182,6 +179,17 @@
     <strong>💬 Únete a nuestro grupo de WhatsApp:</strong><br>
     <a href="https://chat.whatsapp.com/FHC0HqhGl6iBsDuotgVhuy" target="_blank" rel="noopener noreferrer" style="color: #25D366; font-weight: bold;">Grupo de información y actualizaciones</a>
   </p>
+
+  <!-- Contacto: copiado desde flyer/index.html -->
+  <section class="contacto" style="text-align:center; margin-top:20px;">
+    <h2>Contáctanos</h2>
+    <p>Para más información y cualquier consulta, no dude en contactar a los organizadores: <strong>Ana Mantilla, Paul Goyes y Grupo de Investigación HDSP</strong>.</p>
+    <h3>Información de contacto:</h3>
+    <p>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></p>
+    <p>📧 Paul Goyes — <a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></p>
+    <p>📧 Grupo de Investigación HDSP — <a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></p>
+    <p>💬 <strong>WhatsApp:</strong> <a href="https://chat.whatsapp.com/FHC0HqhGl6iBsDuotgVhuy" target="_blank" rel="noopener noreferrer">Únete a nuestro grupo de WhatsApp</a> para información y actualizaciones en tiempo real</p>
+  </section>
 
   <h2 style="margin-top: 24px;">Apoyan</h2>
   <table class="sponsors">
