--- a/salida/index.html
+++ b/salida/index.html
@@ -25,8 +25,7 @@
       <td class="navigation"><a title="Cursos" href="../curso">Cursos</a></td>
       <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
       <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
-      <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
-      <td class="navigation"><a title="Conference Flyer" href="../flyer">Contacto</a></td>
+  <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
     </tr>
   </table>
 
@@ -90,8 +89,9 @@
         </div>
       </div>
       <div class="footer-info">
-        <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
-      </div>
+          <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
+          <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2025: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
+    </div>
     </div>
   </footer>
 
