--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <td class="navigation"><a title="Charlas" href="charlas">Charlas</a></td>
   <td class="navigation"><a title="Novedades" href="novedades">Novedades</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
-  <td class="navigation"><a title="Salida de Campo" href="salida/">Salida de Campo</a></td>
+  <td class="navigation"><a title="Sesión práctica" href="salida/">Sesión práctica</a></td>
     </tr>
   </table>
 
@@ -181,14 +181,18 @@
   </p>
 
   <!-- Contacto: copiado desde flyer/index.html -->
-  <section class="contacto" style="text-align:center; margin-top:20px;">
+  <section class="contacto">
     <h2>Contáctanos</h2>
-    <p>Para más información y cualquier consulta, no dude en contactar a los organizadores: <strong>Ana Mantilla, Paul Goyes y Grupo de Investigación HDSP</strong>.</p>
-    <h3>Información de contacto:</h3>
-    <p>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></p>
-    <p>📧 Paul Goyes — <a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></p>
-    <p>📧 Grupo de Investigación HDSP — <a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></p>
-    <p>💬 <strong>WhatsApp:</strong> <a href="https://chat.whatsapp.com/FHC0HqhGl6iBsDuotgVhuy" target="_blank" rel="noopener noreferrer">Únete a nuestro grupo de WhatsApp</a> para información y actualizaciones en tiempo real</p>
+    <div class="contacto-body">
+      <p>Para más información y cualquier consulta, no dude en contactar a los organizadores: <strong>Ana Mantilla, Paul Goyes y Grupo de Investigación HDSP</strong>.</p>
+      <h3>Información de contacto:</h3>
+      <ul class="contact-list">
+        <li>📧 Ana Mantilla — <a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></li>
+        <li>📧 Paul Goyes — <a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></li>
+        <li>📧 Grupo de Investigación HDSP — <a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></li>
+        <li>💬 <strong>WhatsApp:</strong> <a href="https://chat.whatsapp.com/FHC0HqhGl6iBsDuotgVhuy" target="_blank" rel="noopener noreferrer">Únete a nuestro grupo de WhatsApp</a> para información y actualizaciones en tiempo real</li>
+      </ul>
+    </div>
   </section>
 
   <h2 style="margin-top: 24px;">Apoyan</h2>
