--- a/registration/index.html
+++ b/registration/index.html
@@ -37,7 +37,7 @@
   <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
   <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
   <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
-    <td class="navigation"><a title="Salida de Campo" href="../salida/">Salida de Campo</a></td>
+  <td class="navigation"><a title="Sesión práctica" href="../salida/">Sesión práctica</a></td>
     </tr>
   </table>
 
@@ -98,7 +98,7 @@
             <tr><td>Recepción de resúmenes para posters</td><td>21 de octubre</td></tr>
             <tr><td>Apoyo estudiantes</td><td>16 de octubre</td></tr>
             <tr><td>IA Energy Challenge</td><td> 24 de octubre</td></tr>
-            <tr><td>Registro salida de campo</td><td> 31 de octubre</td></tr>
+            <tr><td>Registro Sesión práctica</td><td> 31 de octubre</td></tr>
           </tbody>
         </table>
       </div>
