--- a/curso/index.html
+++ b/curso/index.html
@@ -56,7 +56,7 @@
   <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
   <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
-      <td class="navigation"><a title="Salida de Campo" href="../salida/">Salida de Campo</a></td>
+  <td class="navigation"><a title="Sesión práctica" href="../salida/">Sesión práctica</a></td>
     </tr>
   </table>
 
