--- a/salida/index.html
+++ b/salida/index.html
@@ -7,8 +7,8 @@
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
   <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
   <link rel="stylesheet" type="text/css" media="all" href="assets/custom-styles.css"/>
-  <meta name="description" content="Salida de Campo - 5a Semana de la Geofísica">
-  <title>Salida de Campo — 5a Semana de la Geofísica</title>
+  <meta name="description" content="Sesión práctica - 5a Semana de la Geofísica">
+  <title>Sesión práctica — 5a Semana de la Geofísica</title>
 </head>
 <body>
 
@@ -26,11 +26,12 @@
       <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
       <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
   <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
+  <td class="navigation"><a class="current" title="Sesión práctica" href=".">Sesión práctica</a></td>
     </tr>
   </table>
 
   <main style="max-width: 900px; margin: 0 auto; padding: 20px;">
-    <h2>Salida de Campo 🌍🎒</h2>
+  <h2>Sesión práctica 🌍🎒</h2>
 
     <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">
       <p style="margin: 15px 0;">
@@ -41,7 +42,7 @@
       <p style="margin: 15px 0;">
         🗓️ Sábado 8 de noviembre<br>
         ⏰ Hora por definir<br>
-        📍 Salida de campo
+  📍 Sesión práctica
       </p>
 
       <p style="margin: 15px 0;">
@@ -51,7 +52,7 @@
 
     <div class="flyers-section">
       <div class="flyer-container">
-        <img src="assets/salida_campo.png" alt="Salida de Campo - 5° Semana de la Geofísica" class="flyer-image">
+  <img src="assets/salida_campo.png" alt="Sesión práctica - 5° Semana de la Geofísica" class="flyer-image">
       </div>
     </div>
   </main>
