--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
     </div>
   </div>
 
+  <!-- Sección dedicada para la Geoferia -->
+  <section class="geoferia" style="text-align:center; margin: 32px 0;">
+    <h2>Geoferia de Semilleros y Capítulos Estudiantiles</h2>
+    <p style="max-width:720px; margin: 0 auto 18px; text-align: justify;">Un espacio creado para visibilizar el trabajo que realizan nuestros estudiantes y fomentar la integración académica entre las distintas áreas de las geociencias.</p>
+  <img src="assets/GEOFERIA.jpg" alt="Geoferia de Semilleros y Capítulos Estudiantiles - afiche" style="width:480px; max-width:90%; height:auto; box-shadow: 0 6px 18px rgba(0,0,0,0.15); border-radius:8px;">
+    <p style="margin-top:10px; font-weight:600;">Viernes, 7 de noviembre — 1:00 pm a 4:00 pm · Sótano del Edificio de Laboratorios Pesados</p>
+  </section>
+
 
   <h2>Comité Organizador</h2>
 
