--- a/charlas/index.html
+++ b/charlas/index.html
@@ -218,6 +218,87 @@
     </div>
   </div>
 
+  <!-- ===== Nuevas charlas añadidas ===== -->
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Propagación de ondas sísmicas en medios poroelásticos - Teoría de Biot y sus extensiones</strong><br>
+      Ph.D. Francisco Cabrera
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Miércoles, 5 de noviembre<br>
+      ⏰ 10 am - 11 am<br>
+      📍 Edificio Jorge Bautista Vesga · Salón 106
+    </p>
+
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/CHARLAS_NUEVAS/1.jpg" alt="Propagacion de ondas - Francisco Cabrera" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Geofísica aplicada en el fortalecimiento de la geodesia en Colombia y el estudio del campo magnético terrestre: Aportes del I.G.A.C</strong><br>
+      Ing. M.Sc. Maria Rosa Alva
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Jueves, 6 de noviembre<br>
+      ⏰ 2 pm - 3 pm<br>
+      📍 Sala Multifuncional (2do piso) · Edificio Bienestar Pro
+    </p>
+
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/CHARLAS_NUEVAS/2.jpg" alt="Geofisica y geodesia - Maria Rosa Alva" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Implementación de Modelos de Lenguaje Natural de la Infraestructura de Datos Geológicos</strong><br>
+      Geól. M.Sc. John Ortiz
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Miércoles, 5 de noviembre<br>
+      ⏰ 11 am - 12 pm<br>
+      📍 Edificio Jorge Bautista Vesga · Salón 106
+    </p>
+
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/CHARLAS_NUEVAS/3.jpg" alt="Modelos de Lenguaje Natural - John Ortiz" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Oportunidades de investigación en inteligencia artificial aplicada a problemas geológicos y geofísicos</strong><br>
+      Geól. Ph.D.(c). Paul Goyes
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Miércoles, 6 de noviembre<br>
+      ⏰ 9 am - 10 am<br>
+      📍 Edificio Jorge Bautista Vesga · Salón 106
+    </p>
+
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/CHARLAS_NUEVAS/4.jpg" alt="IA aplicada - Paul Goyes" class="flyer-image">
+    </div>
+  </div>
+
   <a class="back-link" href="..">← Volver al inicio</a>
 
   <footer class="footer-enhanced">
