--- a/charlas/index.html
+++ b/charlas/index.html
@@ -222,15 +222,18 @@
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
       <strong>🔹 Propagación de ondas sísmicas en medios poroelásticos - Teoría de Biot y sus extensiones</strong><br>
-      Ph.D. Francisco Cabrera
+      👨‍🏫 Con el Ph.D. Francisco Cabrera
     </p>
 
     <p style="margin: 15px 0;">
-      🗓️ Miércoles, 5 de noviembre<br>
+      🗓️ Miércoles 5 de noviembre<br>
       ⏰ 10 am - 11 am<br>
       📍 Edificio Jorge Bautista Vesga · Salón 106
     </p>
 
+    <p style="margin: 15px 0;">
+      💡 Conoce los fundamentos de la teoría de Biot y sus extensiones para la propagación de ondas en medios poroelásticos 🚀
+    </p>
   </div>
 
   <div class="flyers-section">
@@ -242,15 +245,18 @@
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
       <strong>🔹 Geofísica aplicada en el fortalecimiento de la geodesia en Colombia y el estudio del campo magnético terrestre: Aportes del I.G.A.C</strong><br>
-      Ing. M.Sc. Maria Rosa Alva
+      👩‍🏫 Con la Ing. M.Sc. Maria Rosa Alva
     </p>
 
     <p style="margin: 15px 0;">
-      🗓️ Jueves, 6 de noviembre<br>
+      🗓️ Jueves 6 de noviembre<br>
       ⏰ 2 pm - 3 pm<br>
       📍 Sala Multifuncional (2do piso) · Edificio Bienestar Pro
     </p>
 
+    <p style="margin: 15px 0;">
+      💡 Conoce aplicaciones de la geofísica en la geodesia y el estudio del campo magnético terrestre 🚀
+    </p>
   </div>
 
   <div class="flyers-section">
@@ -262,15 +268,18 @@
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
       <strong>🔹 Implementación de Modelos de Lenguaje Natural de la Infraestructura de Datos Geológicos</strong><br>
-      Geól. M.Sc. John Ortiz
+      👨‍🏫 Con el Geól. M.Sc. John Ortiz
     </p>
 
     <p style="margin: 15px 0;">
-      🗓️ Miércoles, 5 de noviembre<br>
+      🗓️ Miércoles 5 de noviembre<br>
       ⏰ 11 am - 12 pm<br>
       📍 Edificio Jorge Bautista Vesga · Salón 106
     </p>
 
+    <p style="margin: 15px 0;">
+      💡 Descubre enfoques de modelos de lenguaje natural aplicados a infraestructuras de datos geológicos 🚀
+    </p>
   </div>
 
   <div class="flyers-section">
@@ -282,15 +291,18 @@
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
       <strong>🔹 Oportunidades de investigación en inteligencia artificial aplicada a problemas geológicos y geofísicos</strong><br>
-      Geól. Ph.D.(c). Paul Goyes
+      👨‍🏫 Con el Geól. Ph.D.(c). Paul Goyes
     </p>
 
     <p style="margin: 15px 0;">
-      🗓️ Miércoles, 6 de noviembre<br>
+      🗓️ Miércoles 6 de noviembre<br>
       ⏰ 9 am - 10 am<br>
       📍 Edificio Jorge Bautista Vesga · Salón 106
     </p>
 
+    <p style="margin: 15px 0;">
+      💡 Explora oportunidades de investigación en inteligencia artificial aplicada a problemas geológicos y geofísicos 🚀
+    </p>
   </div>
 
   <div class="flyers-section">
