--- a/curso/index.html
+++ b/curso/index.html
@@ -159,7 +159,7 @@
 
     <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
       <p style="margin: 15px 0;">
-        <strong>🔹 Procesamiento de datos magnetotelúricos en el software EMPOWER</strong><br>
+        <strong>🔹 Generalidades e introducción a la magnetotelúrica y demostración del software EMPOWER</strong><br>
         👨‍🏫 Con el Geól. M.Sc. Alvaro Vargas
       </p>
 
