--- a/registration/index.html
+++ b/registration/index.html
@@ -61,6 +61,11 @@
         dentro del cual encontrará las respectivas indicaciones para proceder adecuadamente.  
         El único requisito necesario para su inscripción al evento es la diligenciación del <em>abstract</em> de su trabajo.
     </p>
+    <div class="flyers-section">
+      <div class="flyer-container">
+        <img src="assets/registro.jpeg" alt="Registro" class="flyer-image">
+      </div>
+    </div>
 
     <!-- ======= Sección en dos columnas ======= -->
     <section class="topics-dates">
